=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_02-dev

prevent $PerlRequire in a <Perl> section from triggering an endless loop
[Salvador Ortiz Garcia <sog@msg.com.mx>]

build fix for using gcc with AIX
[Jens-Uwe Mager <jum@helios.de>]

allow modification of $r->hostname
[Jim Winstead <jimw@trainedmonkey.com>]

allow Makefile.PL to build mod_perl on Win32 using VC++
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

stop win32 crash when bringing down service
[John K. Sterling <sterling@covalent.net>]

various Apache::test enhancements and fixes
[Ken Williams <ken@forum.swarthmore.edu>, Dave Rolsky <autarch@urth.org>]

Documenting the new PerlAddVar httpd.conf directive
[Stas Bekman <sbekman@stason.org>]

new Apache::test::static_modules() method
[Ken Williams <ken@forum.swarthmore.edu>]

Improved Apache->send_http_header documentation
[Ken Williams <ken@forum.swarthmore.edu>]

=item 1.24_01 - October 10, 2000

fix bug in $r->args that treats ?0 as the empty string instead of zero,
thanks to Matt Sergeant for the spot

add proper offset support to Apache::read

config/test fixups for libapreq/win32
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

skip modules/ssi test if mod_include is not installed

Apache::test enhancements
[Ken Williams <ken@forum.swarthmore.edu>]

fix Apache::exit() so it does it does not trigger a warning

change Apache::PerlRun's Apache class relationship from is-a to has-a
[Ken Williams <ken@forum.swarthmore.edu>]

Apache::SubRequest->run(1) allows ap_send_http_headers() to output for
subrequests

Apache::{Registry,PerlRun} will now log an error if $filename is NOT_FOUND
thanks to Martin Wood for the spot

fix bug where Apache::send_http_header was resetting r->status = 200
thanks to brian d foy for the spot

make extra sure Apache::Constants::AUTOLOAD does not recurse looking
for sub __AUTOLOAD [Jim Winstead <jimw@trainedmonkey.com>]
