@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_02-dev
 
+rewrite of Apache::WRITE() in c/xs
+[Soheil Seyfaie <sseyfaie@cryptologic.com>]
+
 prevent $PerlRequire in a <Perl> section from triggering an endless loop
 [Salvador Ortiz Garcia <sog@msg.com.mx>]
 
